
public class Constants
{
    public const string ANIM_VAR_JOYDIR = "joyDir";
    public const string ANIM_JUMP = "Jump";
    public const string ANIM_FALLING = "Falling";
    public const string ANIM_LEFT_FOOT = "LeftFoot";
    public const string ANIM_RIGHT_FOOT = "RightFoot";

    public const string DIALOGUE_ICONS_PATH = "DialogueIcons";

    public const string MUSIC_EXPLORATION = "event:/Music/Exploration";
    public const string MUSIC_MENU = "event:/Music/Menu event";
    public const string MUSIC_DIALOGS = "event:/Dialogs/Diálogos";
}
